Refactored Put & Delete options (#144)